自己实现token的生成并存储到redis
