# bubble/api/bubble/v1/todo_http.pb.go
@@ -23,6 +23,7 @@ const OperationTodoCreateTodo = "/api.bubble.v1.Todo/CreateTodo"
 const OperationTodoDeleteTodo = "/api.bubble.v1.Todo/DeleteTodo"
 const OperationTodoGetTodo = "/api.bubble.v1.Todo/GetTodo"
 const OperationTodoListTodo = "/api.bubble.v1.Todo/ListTodo"
+const OperationTodoRefreshToken = "/api.bubble.v1.Todo/RefreshToken"
 const OperationTodoUpdateTodo = "/api.bubble.v1.Todo/UpdateTodo"
 
 type TodoHTTPServer interface {
@@ -30,6 +31,7 @@ type TodoHTTPServer interface {
 	DeleteTodo(context.Context, *DeleteTodoRequest) (*DeleteTodoReply, error)
 	GetTodo(context.Context, *GetTodoRequest) (*GetTodoReply, error)
 	ListTodo(context.Context, *ListTodoRequest) (*ListTodoReply, error)
+	RefreshToken(context.Context, *RefreshTokenRequest) (*RefreshTokenReply, error)
 	UpdateTodo(context.Context, *UpdateTodoRequest) (*UpdateTodoReply, error)
 }
 
@@ -40,6 +42,7 @@ func RegisterTodoHTTPServer(s *http.Server, srv TodoHTTPServer) {
 	r.DELETE("/v1/todo/{id}", _Todo_DeleteTodo0_HTTP_Handler(srv))
 	r.GET("/v1/todo/{id}", _Todo_GetTodo0_HTTP_Handler(srv))
 	r.GET("/v1/todos", _Todo_ListTodo0_HTTP_Handler(srv))
+	r.POST("/v1/auth/fresh", _Todo_RefreshToken0_HTTP_Handler(srv))
 }
 
 func _Todo_CreateTodo0_HTTP_Handler(srv TodoHTTPServer) func(ctx http.Context) error {
@@ -152,11 +155,34 @@ func _Todo_ListTodo0_HTTP_Handler(srv TodoHTTPServer) func(ctx http.Context) err
 	}
 }
 
+func _Todo_RefreshToken0_HTTP_Handler(srv TodoHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in RefreshTokenRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationTodoRefreshToken)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.RefreshToken(ctx, req.(*RefreshTokenRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*RefreshTokenReply)
+		return ctx.Result(200, reply)
+	}
+}
+
 type TodoHTTPClient interface {
 	CreateTodo(ctx context.Context, req *CreateTodoRequest, opts ...http.CallOption) (rsp *CreateTodoReply, err error)
 	DeleteTodo(ctx context.Context, req *DeleteTodoRequest, opts ...http.CallOption) (rsp *DeleteTodoReply, err error)
 	GetTodo(ctx context.Context, req *GetTodoRequest, opts ...http.CallOption) (rsp *GetTodoReply, err error)
 	ListTodo(ctx context.Context, req *ListTodoRequest, opts ...http.CallOption) (rsp *ListTodoReply, err error)
+	RefreshToken(ctx context.Context, req *RefreshTokenRequest, opts ...http.CallOption) (rsp *RefreshTokenReply, err error)
 	UpdateTodo(ctx context.Context, req *UpdateTodoRequest, opts ...http.CallOption) (rsp *UpdateTodoReply, err error)
 }
 
@@ -214,6 +240,19 @@ func (c *TodoHTTPClientImpl) ListTodo(ctx context.Context, in *ListTodoRequest, 
 	opts = append(opts, http.Operation(OperationTodoListTodo))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *TodoHTTPClientImpl) RefreshToken(ctx context.Context, in *RefreshTokenRequest, opts ...http.CallOption) (*RefreshTokenReply, error) {
+	var out RefreshTokenReply
+	pattern := "/v1/auth/fresh"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationTodoRefreshToken))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
 	if err != nil {
 		return nil, err
 	}
